--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,8 @@
         <maven.compiler.target>${java.release}</maven.compiler.target>
         <spring.boot.version>2.3.12.RELEASE</spring.boot.version>
         <lombok.version>1.18.22</lombok.version>
-        <bootstrap.version>4.5.0</bootstrap.version>
+        <bootstrap.version>5.1.3</bootstrap.version>
+        <jquery.version>3.6.0</jquery.version>
     </properties>
 
     <dependencyManagement>
