--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
         <bootstrap.version>5.1.3</bootstrap.version>
         <jquery.version>3.6.0</jquery.version>
         <passay.version>1.6.1</passay.version>
+        <problom.version>0.28.0-RC.0</problom.version>
     </properties>
 
     <dependencyManagement>
