--- a/yf-uaa-learning/src/main/resources/application.yml
+++ b/yf-uaa-learning/src/main/resources/application.yml
@@ -4,12 +4,37 @@ spring:
   messages:
     basename: messages
     encoding: UTF-8
+  datasource:
+    driver-class-name: org.h2.Driver
+    password: ''
+    # 数据库连接url
+    # MODE=MySQL                          兼容MySQL方言
+    # DATABASE_TO_LOWER=TRUE              表名转为小写
+    # CASE_INSENSITIVE_IDENTIFIERS=TRUE   不区分大小写
+    # DB_CLOSE_DELAY=-1                   不自动关闭数据库连接
+    url: jdbc:h2:mem:test;MODE=MySQL;DATABASE_TO_LOWER=TRUE;CASE_INSENSITIVE_IDENTIFIERS=TRUE;DB_CLOSE_DELAY=-1
+    username: sa
+    initialization-mode: embedded
+  jpa:
+    database: h2
+    database-platform: org.hibernate.dialect.H2Dialect
+    hibernate:
+      ddl-auto: create-drop
+  h2:
+    console:
+      enabled: true
+      path: /h2-console
+      settings:
+        # 禁止输出 Trace 信息
+        trace: false
+        # 禁止远程访问 H2 管理界面
+        web-allow-others: false
 
 logging:
   level:
-    org:
-      springframework:
-        security: DEBUG
+    org.springframework.security: DEBUG
+    org.springframework.jdbc.core: TRACE
+    cn.jho: DEBUG
   pattern:
     console: '%clr(%d{E HH:mm:ss.SSS}){blue} %clr(%-5p) %clr(${PID}){faint} %clr(---){faint}
               %clr([%8.15t]){cyan} %clr(%-40.40logger{0}){blue} %clr(:){red} %clr(%m){faint}%n'
